refactor: move existing currency rate check from DAO to service layer